lldap/lldap-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lldap-ingress
  namespace: auth
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    lldap.picklemustard.dev/strip-path-prefix: "disabled"
spec:
  ingressClassName: traefik
  rules:
    - host: auth.picklemustard.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lldap-service
                port:
                  number: 17170
