lldap/lldap-tcp-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: lldap-tcp-route
  namespace: lldap
  labels:
    app.kubernetes.io/name: lldap-tcp-route
    app.kubernetes.io/instance: lldap
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: ldap
    spec.ingressClassName: traefik
spec:
  entryPoints:
    - ldap
  routes:
  - match: "HostSNI(`*`)"
    services:
      - name: lldap-service
        port: 3890
        nativeLB: true
